--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,9 @@
+@layer theme, base, mui, components, utilities;
 @import "tailwindcss";
+
+@theme {
+  --color-alabaster: rgb(247 243 237);
+  --color-carbon: rgb(35 35 35);
+  --color-light-black: rgb(45 45 45);
+  --color-flamingo: rgb(242 92 42);
+}
